--- a/ej1/ej01.css
+++ b/ej1/ej01.css
@@ -4,3 +4,27 @@
   font-weight: 700;
   font-style: normal;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#contenedor-header {
+  background-color: yellow;
+  size-adjust: 100%;
+  height: 200px;
+}
+#contenedor-entrada {
+  height: 300px;
+  margin-top: 100px;
+}
+#contenedor-platos-principales {
+  height: 300px;
+  margin-top: 240px;
+}
+#contenedor-postres-bebidas {
+  height: 300px;
+  margin-top: 240px;
+}
+
